force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>- Formula field used in the Frame &quot;Reasons for Approval&quot; (Related Records Lightning Components)</description>
    <formula>IF ( SBQQ__SubscriptionTerm__c  &gt;= 60, &quot;is 5 years or more&quot;,&quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Terms:</label>
    <type>Text</type>
</CustomField>