force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_ID_18_Charachter__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID_18_Charachter__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote ID 18 Charachter</label>
    <type>Text</type>
</CustomField>