force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Municipality_Order__c.field-meta.xml
<CustomField>
    <fullName>Quote_Municipality_Order__c</fullName>
    <formula>IF (
OR(
AND(  ISPICKVAL (CurrencyIsoCode, &quot;DKK&quot;),
OR (  SBQQ__Account__r.municipalityaccount__c = TRUE,  Bill_To_Account__r.municipalityaccount__c  = TRUE,  Municipality_Order_Special__c = TRUE ) ),
AND ( ISPICKVAL (CurrencyIsoCode, &quot;SEK&quot;), SBQQ__Account__r.municipalityaccount__c = TRUE)), TRUE, FALSE)</formula>
    <label>Municipality Order</label>
    <type>Checkbox</type>
</CustomField>