force-app/main/default/objects/SBQQ__Quote__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Add reference for customer, visible in Quote, Max 255 sign</description>
    <inlineHelpText>Add reference for customer, visible in Quote, Max 255 sign</inlineHelpText>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>