force-app/main/default/objects/SBQQ__Quote__c/fields/Reference_Check_of_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Reference_Check_of_Bill_To__c</fullName>
    <formula>Bill_To_Account__r.Reference_Number_Check__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check if Bill-to requires Reference Number</inlineHelpText>
    <label>Reference Check of Bill-To</label>
    <type>Checkbox</type>
</CustomField>