force-app/main/default/objects/SBQQ__Quote__c/fields/Reference_is_true__c.field-meta.xml
<CustomField>
    <fullName>Reference_is_true__c</fullName>
    <description>Used for conditionnary print field in Quote Template</description>
    <formula>IF((Reference__c) == &apos;&apos;, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for conditionnary print field in Quote Template</inlineHelpText>
    <label>Reference is true</label>
    <type>Checkbox</type>
</CustomField>