force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__PartnerDiscount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PartnerDiscount__c</fullName>
    <description>Discount extended to the partner on this opportunity.</description>
    <inlineHelpText>Use for ex: Läromedia Discount (Discount extended to the partner on this opportunity.)</inlineHelpText>
    <label>Partner Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>