force-app/main/default/objects/SBQQ__Quote__c/fields/School_ID__c.field-meta.xml
<CustomField>
    <fullName>School_ID__c</fullName>
    <description>School ID from Account</description>
    <formula>SBQQ__Account__r.Clio_School_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>School ID from Account</inlineHelpText>
    <label>School ID</label>
    <type>Text</type>
</CustomField>