force-app/main/default/objects/SBQQ__Quote__c/fields/School_ID_is_true__c.field-meta.xml
<CustomField>
    <fullName>School_ID_is_true__c</fullName>
    <description>Field created to have the Conditional Printing available in the Content Section // Quote template</description>
    <formula>IF( ISBLANK(  School_ID__c   ) , FALSE , TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School ID is true</label>
    <type>Checkbox</type>
</CustomField>