force-app/main/default/objects/SBQQ__Quote__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>- Date field to see when the Quote has been submitted by the Sales</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>