force-app/main/default/objects/SBQQ__Quote__c/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <description>- formula field that reflects the Quote Net Amount (just added to have the right name)</description>
    <formula>SBQQ__NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Also corresponds to &quot;Net Amount&quot; = Total Quote Price</inlineHelpText>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>