force-app/main/default/objects/SBQQ__Quote__c/fields/TCV_text__c.field-meta.xml
<CustomField>
    <fullName>TCV_text__c</fullName>
    <description>- Formula field used in the Frame &quot;Reasons for Approval&quot; (Related Records Lightning Components)</description>
    <formula>IF ( SBQQ__NetAmount__c  &gt;= 1000000, &quot;is above 1000 K&quot;, 
IF (SBQQ__NetAmount__c  &gt;= 500000, &quot;is above 500 K&quot;,&quot;&quot; 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV:</label>
    <type>Text</type>
</CustomField>