force-app/main/default/objects/SBQQ__Quote__c/fields/Total_ACV2__c.field-meta.xml
<CustomField>
    <fullName>Total_ACV2__c</fullName>
    <description>Used to summarize the Total ACV of a quote (amount / year)</description>
    <inlineHelpText>ACV is the average value of the contract over a 12-month period. Subscriptions less than 12 month calculate the value of the period less than 12 months.</inlineHelpText>
    <label>Total Customer ACV</label>
    <summarizedField>SBQQ__QuoteLine__c.Customer_ACV__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>