force-app/main/default/objects/SBQQ__Quote__c/fields/Total_ACV_incl_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_ACV_incl_Partner_Discount__c</fullName>
    <label>Total ACV incl. Partner Discount</label>
    <summarizedField>SBQQ__QuoteLine__c.Partner_ACV__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>