force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Yearly_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Yearly_Order_Value__c</fullName>
    <description>Sums the Price Per Year value on the Quote Lines</description>
    <inlineHelpText>Price per year, regardless of contract duration.</inlineHelpText>
    <label>Total Yearly Order Value</label>
    <summarizedField>SBQQ__QuoteLine__c.Customer_Price_per_Year_WF__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>