force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Custom_Quote.recordType-meta.xml
<RecordType>
    <fullName>Custom_Quote</fullName>
    <active>true</active>
    <description>Custom quote: select manually Start and End date, Terms is automatically calculated.</description>
    <label>Custom Quote</label>
</RecordType>