force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Standard_Quote.recordType-meta.xml
<RecordType>
    <fullName>Standard_Quote</fullName>
    <active>true</active>
    <description>Standard Quote: same Start, End Date &amp; Terms</description>
    <label>Standard Quote</label>
</RecordType>