force-app/main/default/objects/SBQQ__Quote__c/listViews/Deal_Desk_Quote.listView-meta.xml
<ListView>
    <fullName>Deal_Desk_Quote</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__LineItemsPrinted__c</columns>
    <filterScope>Queue</filterScope>
    <label>Deal Desk</label>
    <queue>Deal_Desk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>