force-app/main/default/objects/SBQQ__Quote__c/listViews/Denmark_AM_Approval_Queue_Quote.listView-meta.xml
<ListView>
    <fullName>Denmark_AM_Approval_Queue_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Denmark AM Approval Queue</label>
    <queue>Denmark_AM_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>