force-app/main/default/objects/SBQQ__Quote__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
    <fullName>SBQQ__All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Opportunity2__c</columns>
    <columns>SBQQ__Type__c</columns>
    <columns>SBQQ__Primary__c</columns>
    <columns>SBQQ__NetAmount__c</columns>
    <columns>Clio_Comments__c</columns>
    <columns>Clio_Commentistrue__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>SBQQ__CustomerDiscount__c</columns>
    <columns>addl_disc_amount_percent__c</columns>
    <columns>SBQQ__AdditionalDiscountAmount__c</columns>
    <columns>SBQQ__AverageCustomerDiscount__c</columns>
    <columns>SBQQ__AveragePartnerDiscount__c</columns>
    <columns>SBQQ__PartnerDiscount__c</columns>
    <columns>Clio_renewed_contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>addl_disc_amount_percent__c</field>
        <operation>lessOrEqual</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>